src/alto-ui/Form/Switch/Switch.scss
@import '../../scss/inc';

.Switch {
  height: $height-default;
  display: flex;
  align-items: center;
  cursor: pointer;
  position: relative;
  font-size: $font-size-medium;

  &--small {
    font-size: $font-size-small;
    height: $height-small;
  }
}

.Switch__input {
  @extend %visually-hidden;
}

.Switch__element {
  font-size: $font-size-medium;
  height: calc(1em + 2px);
  width: calc(2em - 2px);
  cursor: pointer;
  position: relative;
  background-color: $coolgrey-30;
  border-radius: calc(0.5em + 1px);
  transition: background-color 200ms;

  &--small {
    font-size: $font-size-small;
  }

  &--checked {
    background-color: $blue;
  }

  &--disabled {
    background-color: $coolgrey-20;
    cursor: not-allowed;

    &.Switch__element--checked {
      background-color: $blue-30;
    }
  }

  &::before {
    content: '';
    position: absolute;
    border-radius: calc(0.5em - 1px);
    width: calc(1em - 2px);
    height: calc(1em - 2px);
    top: 2px;
    left: 2px;
    background-color: $white;
    transition: transform 200ms;
  }

  &--checked::before {
    transform: translateX(1em) translateX(-4px);
  }
}

.Switch__label {
  line-height: 1;
  flex: 1;

  &--left {
    margin-left: $spacing-small;
  }

  &--right {
    margin-right: $spacing-small;
  }

  &--disabled {
    color: $coolgrey-60;
  }
}

